# dissertation

./: Makefile  README.md  pyproject.toml
dissertation/: __init__.py  dataset.py  features.py  plots.py
dissertation/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
